--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,7 @@ RewriteRule ^register/$ register.php?form=$1 [L]
 RewriteRule ^registration$ forms/register_action.php [L]
 
 # Set the website content pages
+RewriteRule ^admin/pages/content/link/([^/]+)$ admin/pages/content/link.php?eventId=$1 [L]
 RewriteRule ^admin/pages/content/banner/([^/]+)$ admin/pages/content/banner.php?eventId=$1 [L]
 RewriteRule ^admin/pages/content/about/([^/]+)$ admin/pages/content/about.php?eventId=$1 [L]
 RewriteRule ^admin/pages/content/countdown/([^/]+)$ admin/pages/content/countdown.php?eventId=$1 [L]
