--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(css|js|fonts|images|plugins)($|/) - [L]
 
 # Set The form page
+RewriteRule ^register/invitation/([0-9a-zA-Z]+)$	private_registration.php?form=$1 [L]
 RewriteRule ^register/([0-9a-zA-Z]+)$	register.php?form=$1 [L]
 RewriteRule ^registration/event/([a-z]+)/([0-9]+)$	register.php?form=$2&event_type=$1 [L] 
 RewriteRule ^register/$ register.php?form=$1 [L]
