--- a/.htaccess
+++ b/.htaccess
@@ -16,6 +16,7 @@ RewriteRule ^register/([0-9a-zA-Z]+)$	register.php?form=$1 [L]
 RewriteRule ^registration/event/([a-z]+)/([0-9]+)$	register.php?form=$2&event_type=$1 [L] 
 RewriteRule ^register/$ register.php?form=$1 [L]
 RewriteRule ^registration$ forms/register_action.php [L]
+RewriteRule ^language$ forms/register_action.php [L]
 
 #-----------------------------------------------#
 # Set The Mail page
