--- a/.htaccess
+++ b/.htaccess
@@ -10,16 +10,19 @@ RewriteRule ^(css|js|fonts|images|plugins)($|/) - [L]
 
 # Set The pdf page
 RewriteRule ^terms$ TERMS_CONDITIONS.pdf
+RewriteRule ^policy$ APAC_Registration_Fee_Cancellation_Refund_Policy_Final.pdf
 
 # Set The pdf page
 RewriteRule ^pdf/payment/invoice/([0-9a-zA-Z]+)$ admin/app/controller_pdf.php?request=print_payment_invoice&authtoken_=$1 [L]
 RewriteRule ^pdf/payment/receipt/([0-9a-zA-Z]+)$ admin/app/controller_pdf.php?request=print_payment_receipt&authtoken_=$1 [L]
+RewriteRule ^pdf/invitation/letter/([0-9a-zA-Z]+)$ admin/app/controller_pdf.php?request=print_invitation_letter&authtoken_=$1 [L]
 
 # Set The Bank Transfer page
 RewriteRule ^bank/transfert/success/notification/([0-9a-zA-Z]+)$	notification.php?code=BANK_TRANSFER_SUCCESSFULLY_GENERATED [L]
 
 # Set The Payment Callback page
 RewriteRule ^payment/receipt/unfound/notification/([0-9a-zA-Z]+)$	notification.php?code=PAYMENT_RECEIPT_NOT_FOUND_ERROR [L]
+RewriteRule ^invitation/letter/unfound/notification/([0-9a-zA-Z]+)$	notification.php?code=INVITATION_LETTER_NOT_FOUND_ERROR [L]
 
 # Set The Payment Callback page
 RewriteRule ^pay/callback/response/$	admin/config/callback_payment/callback_payment_api.php [L]
